--- a/src/scss/styles/_banner.scss
+++ b/src/scss/styles/_banner.scss
@@ -1,33 +1,88 @@
 // Banner
 
+.banner-container {
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin: 0 auto;
+  text-align: center;
+  @include breakpoint(m) {
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: left;
+    width: 100%;
+  }
+  @include breakpoint(l) {
+    width: 75%;
+  }
+}
+
 .banner {
+  height: 880px;
   background: $red;
   color: $white;
-  height: 460px;
-  overflow: hidden;
   padding-top: 40px;
+  overflow: hidden;
+  @include breakpoint(m) {
+    height: 475px;
+  }
 }
 .banner-content {
   padding-top: 80px;
-  width: 75%;
+  padding-bottom: 40px;
+  @include breakpoint(m) {
+    width: 75%;
+    padding-bottom: 0;
+  }
+  @include breakpoint(l) {
+  }
 }
 .banner-title {
   color: $white;
 }
 
+.banner-video {
+  top: -1px;
+  left: -1px;
+  position: relative;
+  display: block;
+  width: 230px;
+  height: 410px;
+  @include breakpoint(m) {
+    width: 245px;
+    height: 440px;
+  }
+}
+
 .phone {
-  width: 300px;
-  height: 500px;
+  width: 260px;
+  height: 440px;
+  margin: 0 auto;
   border-radius: 20px;
-  background: #fff;
+  background: $lightest-grey;
+  border: 1px solid $grey;
+  @include breakpoint(m) {
+    width: 277px;
+    height: 480px;
+    position: relative;
+    top: -50px;
+  }
 }
 .phone-inner {
-  background: $lightest-grey;
-  width: 270px;
-  height: 480px;
+  width: 230px;
+  height: 390px;
+  border-top: 1px solid $light-grey;
+  border-left: 1px solid $light-grey;
+  border-right: 1px solid $light-grey;
   position: relative;
   top: 20px;
-  left: 15px;
+  left: 14px;
+  overflow: hidden;
+  @include breakpoint(m) {
+    left: 15px;
+    width: 245px;
+    height: 415px;
+  }
 }
 
 .banner-button {
